--- a/src/pages/Test/dxz-Lang-currency/index.module.less
+++ b/src/pages/Test/dxz-Lang-currency/index.module.less
@@ -1,7 +1,8 @@
 .container {
-	padding:24px 16px;
-	.item{
-		.style(){
+	padding: 24px 16px;
+	
+	.item {
+		.style() {
 			width: 161px;
 			height: 40px;
 			display: flex;
@@ -11,16 +12,18 @@
 			color: rgb(119, 126, 144);
 		}
 		.style();
-		&:first-child{
-			color:#3772ff;
+		
+		&.selected{
+			color: #3772ff;
 		}
-		&:hover{
+		
+		&:hover {
 			border-radius: 12px;
 			background: #f4f5f6;
 		}
-		}
+	}
 	
-	.list{
+	.list {
 		padding: 0px;
 		width: 346px;
 		height: fit-content;
@@ -33,18 +36,20 @@
 		margin-top: 8px;
 		user-select: none;
 	}
+	
 	& {
-		.divider{
+		.divider {
 			content: "";
 			background-color: #e6e8ec;
 			width: 1px;
 			height: 24px;
 			display: inline-block;
-			padding:0px 0px;
-			position:absolute;
-			top:30px;
-			left:186px;
+			padding: 0px 0px;
+			position: absolute;
+			top: 30px;
+			left: 186px;
 		}
+		
 		:global {
 			
 			
@@ -55,7 +60,8 @@
 				padding: 0 32px;
 				height: 40px;
 			}
-			.ant-tabs-nav:before{
+			
+			.ant-tabs-nav:before {
 				width: 0;
 			}
 			
@@ -66,20 +72,24 @@
 				font-weight: 600;
 			}
 			
-			.ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn{
+			.ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
 				color: #3772ff;
 			}
-			.ant-tabs-tab-btn{
+			
+			.ant-tabs-tab-btn {
 				user-select: none;
 				font-weight: 600;
 			}
-			.ant-tabs-ink-bar.ant-tabs-ink-bar-animated{
+			
+			.ant-tabs-ink-bar.ant-tabs-ink-bar-animated {
 				background-color: #3772ff;
 			}
-			.ant-tabs-top > .ant-tabs-nav .ant-tabs-ink-bar{
+			
+			.ant-tabs-top > .ant-tabs-nav .ant-tabs-ink-bar {
 				height: 4px;
 				
 			}
+			
 			//.ant-tabs-tab.ant-tabs-tab-active:before {
 			//	content: "";
 			//	background-color: #f4f5f6;
