--- a/src/pages/_BussinessComponents/Space-List-Item/style.module.less
+++ b/src/pages/_BussinessComponents/Space-List-Item/style.module.less
@@ -78,13 +78,13 @@
 			color: #f21361;
 			
 			&::after {
-				content: "leave";
+				//content: "leave";
 				
 			}
 		}
 		
 		&::after {
-			content: "Joined";
+			//content: "Joined";
 		}
 	}
 	
