--- a/src/pages/Space-Info/index.module.less
+++ b/src/pages/Space-Info/index.module.less
@@ -16,15 +16,20 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		
+		line-height: normal;
 		span {
-			margin-left: 8px;
 			color: #777e90;
 		}
 	}
-	
+	svg{
+		margin-right: 8px;
+	}
 	&:hover {
 		background: #d9d9d9;
+		svg path{
+			transition: all .5s ease;
+			fill:#000000;
+		}
 		span {
 			transition: all .5s ease;
 			color: #141416;
@@ -51,6 +56,12 @@
 			font-size: 16px;
 			font-weight: 600;
 			color: #ffffff;
+		}
+	}
+	&:hover{
+		span{
+			transition: all .3s ease;
+			background: #0099ff;
 		}
 	}
 }
@@ -321,7 +332,7 @@
 	justify-content: flex-start;
 	width: 1200px;
 	margin-top: 16px;
-	background-color: rgb(244, 245, 246);
+	background-color: rgb(255,255,255);
 }
 
 .space-join {
@@ -378,9 +389,9 @@
 }
 
 .info-box {
-	padding: 0px 32px 34px;
+	padding: 0px 32px 48px;
 	width: 1200px;
-	border-radius: 0px 0px 12px 12px;
+	border-radius: 0;
 	background-color: rgb(255, 255, 255);
 	display: block;
 }
@@ -397,7 +408,7 @@
 }
 
 .content-right {
-	width: 340px;
+	width: 292px;
 	background-color: rgb(255, 255, 255);
 	border-radius: 12px;
 	padding: 24px;
@@ -450,5 +461,33 @@
 		height: 66px;
 		width: 568px;
 		margin-bottom: 0;
+	}
+}
+.tabs-box{
+	border-radius: 0px 0px 12px 12px;
+	width: 1200px;
+	background-color: rgb(255, 255, 255);
+	padding:0 32px 32px 32px;
+}
+.space-info{
+	:global{
+		.ant-tabs-tab-btn{
+			font-weight: 600;
+			font-size: 16px;
+			line-height: 48px;
+			text-align: center;
+			color: #6F767E;
+			user-select: none;
+			&:hover{
+				color: #141416;
+			}
+		}
+		.ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn{
+			color: #141416;
+		}
+		.ant-tabs-top > .ant-tabs-nav .ant-tabs-ink-bar{
+			background: #141416;
+			min-height: 3px;
+		}
 	}
 }
