--- a/src/pages/Test/dxz-my-profile/index.module.less
+++ b/src/pages/Test/dxz-my-profile/index.module.less
@@ -172,7 +172,7 @@
 			box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 		}
 	}
-	.space_name{
+	.card-space-name{
 		font-weight: 600;
 		font-size: 16px;
 		line-height: 24px;
@@ -181,6 +181,14 @@
 		margin-top: 16px;
 	}
 	:global{
+		.ant-tabs-tab{
+			padding:0 0 0 0;
+		}
+		.ant-tabs-nav-list{
+			width:426px ;
+			display: flex;
+			justify-content: space-between;
+		}
 		.ant-tabs-tab-btn{
 			font-weight: 600;
 			font-size: 16px;
