--- a/src/pages/Test/dxz-Header-panel/index.module.less
+++ b/src/pages/Test/dxz-Header-panel/index.module.less
@@ -1,4 +1,4 @@
-.container{
+.container {
 	box-shadow: rgb(0 0 0 / 15%) 0px 4px 20px;
 	width: 256px;
 	height: fit-content;
@@ -6,18 +6,12 @@
 	margin-left: 34px;
 	border-radius: 12px;
 	padding: 24px 16px;
-.item-text{
-	color: rgb(119, 126, 144);
-	font-size: 14px;
-	font-weight: 600;
-	margin: 2px 0px;
-	display: inline-flex;
-}
-	.item-text:hover{
-		color:#0070f3;
-		cursor:pointer;
-		user-select: none;
-		transition:color 0.3s ease;
+	.item-text {
+		color: rgb(119, 126, 144);
+		font-size: 14px;
+		font-weight: 600;
+		margin: 2px 0px;
+		display: inline-flex;
 	}
 	.item {
 		display: flex;
@@ -26,12 +20,21 @@
 		border-bottom: 1px solid rgb(230, 232, 236);
 		padding-top: 16px;
 		padding-bottom: 12px;
+		
 		&:last-child {
 			padding-bottom: 0;
 			border-bottom: none;
 		}
-		&:first-child{
+		
+		&:first-child {
 			padding-top: 0;
+		}
+		
+		&:hover {
+			color: #0070f3;
+			cursor: pointer;
+			user-select: none;
+			transition: color 0.3s ease;
 		}
 	}
 }
