UI : pop-switch样式完成

--- a/src/pages/_BussinessComponents/Layout_Header/Header-General-Button-Popover/index.module.less
+++ b/src/pages/_BussinessComponents/Layout_Header/Header-General-Button-Popover/index.module.less
@@ -40,3 +40,32 @@
 		}
 	}
 }
+.pop-switch:global(.ant-switch) {
+	width: 40px;
+	height: 20px;
+	min-width: unset;
+	background: #e6e8ec;
+	border-radius: 32px;
+	&:focus{
+		box-shadow: unset;
+	}
+	&-checked{
+		background: #a5c7ee;
+		:global(.ant-switch-handle){
+			left: calc(100% - 18px);
+		}
+	}
+	:global {
+		.ant-switch-handle {
+			margin-left: 2px;
+			width: 12px;
+			height: 12px;
+			border-radius: 32px;
+			top: 4px;
+			&::before {
+				background: #0070f3;
+				border-radius: 32px;
+			}
+		}
+	}
+}
