--- a/src/pages/Test/dxz-DAO-dropdown-pop/index.module.less
+++ b/src/pages/Test/dxz-DAO-dropdown-pop/index.module.less
@@ -68,27 +68,30 @@
 //	}
 //}
 
-
 .pop-switch:global(.ant-switch) {
-	width: 20px;
+	width: 40px;
 	height: 20px;
+	min-width: unset;
 	background: #e6e8ec;
+	border-radius: 32px;
+	&:focus{
+		box-shadow: unset;
+	}
 	&-checked{
-		background: #0070f3;
-		:global(.ant-switch-handle::after){
-			
-				
-				border-radius: 32px;
+		background: #a5c7ee;
+		:global(.ant-switch-handle){
+			left: calc(100% - 18px);
 		}
 	}
 	:global {
 		.ant-switch-handle {
+			margin-left: 2px;
 			width: 12px;
 			height: 12px;
-			//background: #0070f3;
 			border-radius: 32px;
+			top: 4px;
 			&::before {
-				background: #fff;
+				background: #0070f3;
 				border-radius: 32px;
 			}
 		}
