--- a/src/pages/Test/dxz-my-profile/index.module.less
+++ b/src/pages/Test/dxz-my-profile/index.module.less
@@ -22,6 +22,7 @@
 	font-weight: 600;
 	line-height: 39px;
 	vertical-align: middle;
+	user-select: none;
 }
 .info-box{
 	padding: 0px 32px 48px;
@@ -43,7 +44,14 @@
 	border-radius: 24px;
 	margin-top: 8px;
 }
-
+.sharing-box {
+	display: flex;
+	align-items: center;
+}
+.share_join-box {
+	display: flex;
+	align-items: center;
+}
 .net-worth-title {
 	font-weight: 500;
 	font-size: 16px;
@@ -209,4 +217,163 @@
 		}
 	}
 	
+}
+
+.my-profile-NFTs-card-field{
+	height: 776px;
+	width: 1136px;
+	display: flex;
+	justify-content: space-between;
+	align-content: space-between;
+	flex-flow: row wrap;
+}
+.my-profile-NFTs-box{
+	margin-top: 24px;
+	width: 1136px;
+	height: 856px;
+}
+.my-profile-NFTs-card{
+	width: 272px;
+	height: 380px;
+	border: 1px solid #E6E8EC;
+	border-radius: 12px;
+	display: inline-block;
+	overflow: hidden;
+}
+.NFTs-card-info{
+	width: 272px;
+	height: 108px;
+	z-index: 1;
+	display: flex;
+	padding: 12px;
+	display: flex;
+	flex-flow: column wrap;
+}
+	
+.NFTs-collect-name{
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 16px;
+	width: 248px;
+	height: 16px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+.NFTs-card-main{
+	width: 270px;
+	height: 270px;
+	display: flex;
+	background: url("https://img2.baidu.com/it/u=1937777404,856192910&fm=253&fmt=auto&app=120&f=JPEG?w=505&h=500");
+	background-size: 100% 100%;
+	background-position: 50%;
+	background-repeat: no-repeat;
+	transition: ease-in-out all .2s;
+}
+.NFTs-card-main:hover{
+	background-size: 108% 108%;
+}
+
+.NFTs-view-on {
+	width: 124px;
+	height: 40px;
+	background: #0070f3;
+	border-radius: 12px;
+	padding: 8px 16px;
+	opacity: 0;
+	z-index: -1;
+	color: #ffffff;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	font-weight: 700;
+	font-size: 14px;
+	line-height:normal;
+	margin-top: 250px;
+	margin-left: -34px;
+	transition:all .25s ease;
+	svg path{
+		fill: #3772ff;
+	}
+}
+.NFTs-link-box{
+	width: 20px;
+	height: 20px;
+	background: #ffffff;
+	border-radius: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.NFTs-card-main:hover .NFTs-view-on{
+	transition:all .25s ease;
+	z-index: 2;
+	opacity: 1;
+	margin-top: 208px;
+	margin-left: -34px;
+}
+.NFTs-card-polygon{
+	padding: 4px 8px;
+	width: 94px;
+	height: 24px;
+	margin-left: 12px;
+	margin-top: 12px;
+	background: rgba(255, 255, 255, 0.7);
+	backdrop-filter: blur(20px);
+	border-radius: 26px;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 16px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.NFTs-price-box{
+	padding: 12px;
+	width: 248px;
+	height: 58px;
+	background: #F4F5F6;
+	border-radius: 12px;
+	margin-top: 10px;
+}
+.NFTs-price-title{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 16px;
+	color: #777E91;
+	margin-bottom: 4px;
+}
+.NFTs-price-number{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 16px;
+	color: #353945;
+	margin-bottom: 0;
+}
+.my-profile-tab-subtitle{
+	display: block;
+}
+.my-profile-tab-price-title{
+	width: fit-content;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 24px;
+	color: #777E91;
+	margin-bottom: 8px;
+	
+}
+.my-profile-tab-price-number{
+	width: fit-content;
+	font-weight: 600;
+	font-size: 24px;
+	line-height: 24px;
+	color: #16161A;
 }
