--- a/src/pages/Test/dxz-my-profile/index.module.less
+++ b/src/pages/Test/dxz-my-profile/index.module.less
@@ -13,8 +13,8 @@
 	align-items: center;
 	flex-flow: column nowrap;
 	width: 100%;
-	height: fit-content;
-	padding-bottom: 100px;
+	height: min-content;
+	padding-bottom: 260px;
 	padding-top: 40px;
 }
 
