过渡效果完善

--- a/src/pages/Test/dxz-button/index.module.less
+++ b/src/pages/Test/dxz-button/index.module.less
@@ -17,8 +17,17 @@
 :global{
 	.ant-btn.ant-btn-primary {
 		&:local(.primary){
-			
-			background-color: #f21361;
+			color: #777e90;
+			background-color: #f4f5f6;
+			padding: 12px 20px;
+			width: 140px;
+			height: 48px;
+			border: none;
+			border-radius: 12px;
+			font-size: 16px;
+			font-weight: 700;
+			box-shadow: none;
+			text-shadow: none;
 		}
 		&:local(.leave){
 			padding: 12px 20px;
@@ -28,9 +37,11 @@
 			border: 1px solid #F21361;
 			border-radius: 12px;
 			font-weight: 700;
-			font-size: 15px;
+			font-size: 16px;
 			line-height: 24px;
 			color: #F21361;
+			box-shadow: none;
+			text-shadow: none;
 		}
 	}
 	
