--- a/src/pages/Test/dxz-my-profile/index.module.less
+++ b/src/pages/Test/dxz-my-profile/index.module.less
@@ -68,15 +68,18 @@
 		transition: all .25s ease;
 		background: #f4f5f6;
 		color: #1a1d1f;
+		
 		svg path {
 			transition: all .25s ease;
 			fill: #141416;
 		}
 	}
+	
 	&:focus {
 		background: #f4f5f6;
 		color: rgb(119, 126, 144);
-		svg path{
+		
+		svg path {
 			fill: rgb(119, 126, 144);
 		}
 	}
@@ -94,17 +97,21 @@
 	box-shadow: unset;
 	padding: 0;
 	border: none;
+	
 	&:hover {
 		background: #f4f5f6;
+		
 		svg path {
 			transition: all .3s ease;
 			fill: #141416;
 		}
 	}
+	
 	&:focus {
 		background: #f4f5f6;
 	}
 }
+
 .social-medias {
 	display: flex;
 	flex-direction: row;
@@ -116,6 +123,7 @@
 		}
 	}
 }
+
 .sharing-box {
 	display: flex;
 	align-items: center;
@@ -263,6 +271,7 @@
 		display: block;
 		text-align: center;
 		user-select: none;
+		transition: box-shadow .3s ease;
 		&:hover {
 			transition: box-shadow .3s ease;
 			box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
@@ -339,7 +348,7 @@
 	display: inline-block;
 	overflow: hidden;
 	transition: box-shadow .3s ease;
-	&:hover{
+	&:hover {
 		transition: box-shadow .3s ease;
 		box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 	}
@@ -404,6 +413,7 @@
 	transition: all .25s ease;
 	margin-left: auto;
 	margin-right: auto;
+	
 	svg path {
 		fill: #3772ff;
 	}
@@ -499,7 +509,8 @@
 	line-height: 24px;
 	color: #16161a;
 }
-.my-profile-SBTs-box{
+
+.my-profile-SBTs-box {
 	width: 1136px;
 	height: 830px;
 	display: flex;
@@ -508,7 +519,8 @@
 	flex-flow: row wrap;
 	margin-top: 24px;
 }
-.my-profile-SBTs-card{
+
+.my-profile-SBTs-card {
 	user-select: none;
 	display: flex;
 	flex-direction: column;
@@ -516,60 +528,69 @@
 	padding: 0px;
 	width: 272px;
 	height: fit-content;
-	border: 1px solid #E6E8EC;
+	border: 1px solid #e6e8ec;
 	border-radius: 12px;
 	overflow: hidden;
 	transition: box-shadow .3s ease;
-	&:hover{
+	
+	&:hover {
 		transition: box-shadow .3s ease;
 		box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
 	}
 }
-.SBTs-card-info{
+
+.SBTs-card-info {
 	padding: 12px;
 	width: 272px;
 	height: 135px;
-	background: #FFFFFF;
+	background: #ffffff;
 	z-index: 1;
 	display: flex;
 	flex-flow: column wrap;
 }
-.card-logo-name-box{
+
+.card-logo-name-box {
 	display: flex;
 	flex-flow: row nowrap;
 	align-items: center;
 	margin-top: 12px;
 }
-.SBTs-card-space-logo{
+
+.SBTs-card-space-logo {
 	width: 32px;
 	height: 32px;
 	border-radius: 8px;
 }
-.SBTs-card-space-name{
+
+.SBTs-card-space-name {
 	font-weight: 500;
 	font-size: 14px;
 	color: #353945;
 	margin-left: 10px;
 	user-select: text;
 }
-.divider{
+
+.divider {
 	width: 100%;
 	height: 1px;
 	background: #e6e8ec;
 	margin: 10px 0;
 }
-.SBTs-card-op{
+
+.SBTs-card-op {
 	display: flex;
 	flex-flow: row nowrap;
 	align-items: center;
 	font-weight: 500;
 	font-size: 14px;
-	color: #777E91;
-	span{
+	color: #777e91;
+	
+	span {
 		margin-left: 8px;
 	}
 }
-.my-profile-Tokens-box{
+
+.my-profile-Tokens-box {
 	width: 1136px;
 	height: fit-content;
 	display: flex;
@@ -577,53 +598,63 @@
 	flex-flow: column wrap;
 	margin-top: 24px;
 }
-.my-profile-Tokens-list{
+
+.my-profile-Tokens-list {
 	user-select: none;
 	padding: 16px;
 	width: 1136px;
 	height: 75px;
-	border: 1px solid #E6E8EC;
+	border: 1px solid #e6e8ec;
 	border-radius: 12px;
 	display: flex;
 	align-items: center;
-	&:hover{
-		background: #F4F5F6;
+	
+	&:hover {
+		background: #f4f5f6;
 		width: 1136px;
 		height: 75px;
 	}
-	&:not(:last-child){
+	
+	&:not(:last-child) {
 		margin-bottom: 16px;
 	}
-	svg{
+	
+	svg {
 		width: 32px;
 		height: 32px;
 	}
-	svg path{
-		fill:  #FF0420;
+	
+	svg path {
+		fill: #ff0420;
 	}
 }
-.Tokens-price-box{
+
+.Tokens-price-box {
 	margin-left: 16px;
 	width: 100%;
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: space-between;
-	p{
+	
+	p {
 		margin-bottom: 0;
 	}
 }
-.Tokens-price-name{
+
+.Tokens-price-name {
 	width: 100%;
 	font-weight: 500;
 	font-size: 16px;
 	color: #002237;
 }
-.Tokens-price-addition{
+
+.Tokens-price-addition {
 	width: 100%;
 	font-weight: 400;
 	font-size: 14px;
-	color: #777E91;
-	&:last-child{
+	color: #777e91;
+	
+	&:last-child {
 		text-align: right;
 	}
 }
