--- a/src/pages/_BussinessComponents/Layout_Header/Header-General-Button-Popover/index.module.less
+++ b/src/pages/_BussinessComponents/Layout_Header/Header-General-Button-Popover/index.module.less
@@ -23,7 +23,17 @@
 		border-bottom: 1px solid rgb(230, 232, 236);
 		padding-top: 16px;
 		padding-bottom: 12px;
-		
+		&:hover{
+			svg path{
+				fill: #0070f3;
+			}
+			svg ellipse{
+				fill: #0070f3;
+			}
+			svg circle{
+				fill: #0070f3;
+			}
+		}
 		&:hover {
 			.item-text{
 				color: #0070f3;
