--- a/src/pages/Profile/index.module.less
+++ b/src/pages/Profile/index.module.less
@@ -194,7 +194,25 @@
 	height: 110px;
 	border-radius: 50%;
 }
-.gray-box {
+.gray-box-val {
+	height: 24px;
+	display: flex;
+	align-items: center;
+	background: #e6e8ec;
+	border-radius: 24px;
+	width: 53px;
+	padding: 2px 8px;
+}
+.gray-text-val {
+	margin-left: 4px;
+	line-height: normal;
+	overflow: hidden;
+	text-overflow:ellipsis;
+	white-space: nowrap;
+	width: 28px;
+	text-align: left;
+}
+.gray-box-rank {
 	height: 24px;
 	display: flex;
 	align-items: center;
@@ -202,14 +220,16 @@
 	border-radius: 24px;
 	width: 68px;
 	padding: 2px 8px;
+}
+
+.gray-text-rank {
+	margin-left: 4px;
+	line-height: normal;
 	overflow: hidden;
 	text-overflow:ellipsis;
 	white-space: nowrap;
-}
-
-.gray-text {
-	margin-left: 4px;
-	line-height: normal;
+	text-align: left;
+	width: 40px;
 }
 
 .space-info {
@@ -404,8 +424,8 @@
 	height: 272px;
 	display: flex;
 	background: url("https://img2.baidu.com/it/u=1937777404,856192910&fm=253&fmt=auto&app=120&f=JPEG?w=505&h=500");
-	background-size: 100% 100%;
-	background-position: 50%;
+	background-size: 104% 104%;
+	background-position: center;
 	background-repeat: no-repeat;
 	transition: ease-in-out all .2s;
 	flex-flow: row nowrap;
@@ -413,7 +433,7 @@
 }
 
 .NFTs-card-main:hover {
-	background-size: 108% 108%;
+	background-size: 110% 110%;
 }
 
 .NFTs-view-on {
