--- a/src/pages/Profile/index.module.less
+++ b/src/pages/Profile/index.module.less
@@ -157,6 +157,7 @@
 	height: 300px;
 	object-fit: cover;
 	object-position: 50% 50%;
+	user-select: none;
 }
 
 .my-avatar-container {
@@ -166,6 +167,7 @@
 	background-color: rgb(238, 238, 238);
 	border-radius: 132px;
 	border: 4px solid rgb(255, 255, 255);
+	user-select: none;
 }
 
 .my-avatar {
@@ -174,6 +176,7 @@
 	height: 132px;
 	object-fit: cover;
 	object-position: 50% 50%;
+	user-select: none;
 }
 
 .card-top {
