--- a/src/pages/Space-Info/index.module.less
+++ b/src/pages/Space-Info/index.module.less
@@ -420,23 +420,28 @@
 	height: 300px;
 	object-fit: cover;
 	object-position: 50% 50%;
+	user-select: none;
 }
 
 .avatar-box {
 	position: absolute;
-	top: 204px;
+	top: 200px;
 	left: 32px;
 	background-color: rgb(238, 238, 238);
 	border-radius: 16px;
+	width: 132px;
+	height: 132px;
+	user-select: none;
 }
 
 .space-avatar {
 	border-radius: 16px;
-	width: 116px;
-	height: 116px;
+	width: 132px;
+	height: 132px;
 	object-fit: cover;
 	object-position: 50% 50%;
 	border: 4px solid rgb(255, 255, 255);
+	user-select: none;
 }
 
 .info-box {
@@ -653,7 +658,7 @@
 			transition: all .25s ease;
 			display: flex;
 			align-items: center;
-			
+			padding: 0 4px;
 			svg {
 				width: 16px;
 				height: 16px;
