--- a/src/pages/_BussinessComponents/Space-Settings/index.module.less
+++ b/src/pages/_BussinessComponents/Space-Settings/index.module.less
@@ -105,7 +105,68 @@
 	align-items: center;
 	margin: 32px 0px 31px
 }
-
+.general-save-btn:global(.ant-btn){
+	border-radius: 12px;
+	padding: 12px 20px;
+	font-size: 15px;
+	font-weight: 700;
+	line-height: 24px;
+	height: 48px;
+	width: fit-content;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: #3772ff;
+	color: #ffffff;
+	transition: unset;
+	border: unset;
+}
+.general-save-btn:global(.ant-btn[disabled]){
+	color: rgba(0, 0, 0, 0.25);
+	border-color: #d9d9d9;
+	background: #f5f5f5;
+	transition: unset;
+}
+.general-email-input:global(.ant-input){
+	padding: 12px 16px;
+	width: 100%;
+	height: 48px;
+	background: #F4F4F4;
+	border-radius: 12px;
+	box-shadow: unset;
+	border: 2px solid #f4f4f4;
+	font-size: 14px;
+	font-weight: 700;
+	color: #1a1d1f;
+	&:hover{
+		border-color: #f4f4f4;
+		border: 2px solid #E6E8EC;
+	}
+	&:focus{
+		background: #FFFFFF;
+		border: 2px solid #777E91;
+		box-shadow: unset;
+	}
+}
+.general-bio-text-area:global(.ant-input){
+	padding: 4px;
+	width: 100%;
+	height: 112px;
+	background: #F4F4F4;
+	border-radius: 12px;
+	display: flex;
+	flex-flow: column wrap;
+	width: 840px;
+	height: 112px;
+	border: 2px solid rgba(154, 159, 165, 0.25);
+	border-radius: 12px;
+	box-shadow: unset;
+	&:focus{
+		background: #FFFFFF;
+		border: 2px solid #777E91;
+		box-shadow: unset;
+	}
+}
 .settings-title {
 	user-select: none;
 	margin-bottom: 8px;
@@ -115,7 +176,14 @@
 	line-height: 16px;
 }
 
-
+:global(.ant-select-show-search.ant-select:not(.ant-select-customize-input) .ant-select-selector){
+	border-radius: 12px;
+	height: 48px;
+}
+:global(.ant-select-multiple .ant-select-selection-item-remove){
+	display: flex;
+	align-items: center;
+}
 .container {
 	:global {
 		.ant-select-multiple span.ant-select-selection-item {
@@ -160,16 +228,13 @@
 					line-height: 24px;
 					color: #777e91;
 				}
-				
-				.ant-select-selection-item-remove {
-					display: flex;
-				}
 			}
 		}
 	}
 }
 
 .selectbox select:not(.ant-select-customize-input) .ant-select-selector .ant-select-selection-item {
+	border-radius: 12px;
 	line-height: 42px;
 	height: 40px;
 	width: 100%;
