UI : edit-profile , profile-setting完善

--- a/src/pages/Test/dxz-button/index.module.less
+++ b/src/pages/Test/dxz-button/index.module.less
@@ -17,6 +17,7 @@
 :global{
 	.ant-btn.ant-btn-primary {
 		transition: unset;
+		box-shadow: unset;
 		&:local(.joined){
 			color: #777e90;
 			background-color: #f4f5f6;
