--- a/src/pages/Edit-Profile/index.module.less
+++ b/src/pages/Edit-Profile/index.module.less
@@ -86,21 +86,15 @@
 	margin-bottom: 16px;
 }
 
-.account-info {
-	//display: flex;
-	//justify-content: flex-start;
-	//flex-flow: column wrap;
+
+.profile-photo{
 	width: 100%;
+	height: 100%;
+	border-radius: 16px;
+	object-fit: cover;
+	object-position: 50% 50%;
+	user-select: none;
 }
-
-.account-title_1 {
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 24px;
-	color: #23262f;
-	margin-bottom: 2px;
-}
-
 .edit-input {
 	&::placeholder {
 		font-weight: 600;
@@ -117,19 +111,6 @@
 	line-height: 24px;
 	color: #23262f;
 	margin: 32px 0 2px 0;
-}
-
-.subtitle {
-	font-size: 14px;
-	font-weight: 600;
-	line-height: 24px;
-	color: #33383f;
-	display: flex;
-	justify-content: flex-start;
-	flex-flow: row nowrap;
-	height: 28px;
-	align-items: center;
-	margin: 30px 0 12px 0;
 }
 
 .last-intro {
