--- a/src/pages/_BussinessComponents/Edit-Social-Item/index.module.less
+++ b/src/pages/_BussinessComponents/Edit-Social-Item/index.module.less
@@ -55,6 +55,10 @@
 	}
 }
 
+.edit-social-item:first-child{
+	.sub-title{
+		margin: 0 0 12px 0;}
+	}
 
 .sub-title {
 	user-select: none;
@@ -67,7 +71,7 @@
 	flex-flow: row nowrap;
 	height: 28px;
 	align-items: center;
-	margin: 32px 0 12px 0;
+	margin: 30px 0 12px 0;
 }
 
 .divider {
